# keypoint-factory

./: .flake8  .gitignore  README.md  format.sh  pyproject.toml
keypointfactory/: train.py
keypointfactory/configs/: aliked.yaml  disk-homographies.yaml  disk-hpatches.yaml  disk-megadepth.yaml  disk-official-megadepth.yaml  disk-official.yaml  disk-rerun.yaml  disk-retrained.yaml  disk.yaml  disk_ev-hpatches.yaml  disk_ev.yaml  disk_kornia.yaml  diskv2-homographies.yaml  diskv2-hpatches.yaml  diskv2-megadepth.yaml  diskv2.yaml  sift.yaml  superpoint-open.yaml  superpoint.yaml
keypointfactory/datasets/: homographies.py  hpatches.py  image_pairs.py  megadepth.py  tartanair.py
keypointfactory/datasets/megadepth_scene_lists/: disk_scenes.txt  disk_train_scenes.txt  disk_valid_scenes.txt  imc2020.txt  place_scene_list_here
keypointfactory/eval/: eval_pipeline.py  hpatches.py  imc2020.py  inspect.py  io.py  megadepth1500.py  scannet1500.py  utils.py
keypointfactory/geometry/: depth.py  epipolar.py  homography.py  utils.py  wrappers.py
keypointfactory/models/: __init__.py  base_model.py  cache_loader.py  triplet_pipeline.py  two_view_pipeline.py
keypointfactory/models/extractors/: aliked.py  disk-ev.py  disk.py  disk_ev.py  diskv2.py  sift.py
keypointfactory/models/utils/: blocks.py  metrics.py  misc.py  unet.py
keypointfactory/robust_estimators/homography/: degensac.py
keypointfactory/robust_estimators/relative_pose/: degensac.py
keypointfactory/utils/: experiments.py  export_predictions.py  image.py  misc.py  tensor.py  tools.py
keypointfactory/visualization/: global_frame.py  local_frame.py  tools.py  triplet_frame.py  two_view_frame.py  visualize_batch.py  viz2d.py
keypointfactory_nonfree/: superpoint.py
tests/: test_eval_utils.py  test_integration.py
