[project]
name = "keypointfactory"
description = "Training and evaluation of local keypoint detectors and descriptors."
version = "0.0"
authors = [
    {name = "Deep Desai"},
    {name = "Philipp Lindenberger"},
    {name = "Paul-Edouard Sarlin"},
    {name = "Rémi Pautrat"},
    {name = "Iago Suárez"},
]
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=1.7",
    "torchvision>=0.8",
    "numpy",
    "opencv-python",
    "tqdm",
    "matplotlib",
    "scipy",
    "h5py",
    "omegaconf",
    "tensorboard",
    "albumentations",
    "kornia",
    "seaborn",
    "joblib",
    "scikit-learn", # temp
]
urls = {Repository = "https://github.com/cvg/glue-factory"}

[project.optional-dependencies]
extra = [
    "pycolmap",
    "poselib @ git+https://github.com/PoseLib/PoseLib.git@9c8f3ca1baba69e19726cc7caded574873ec1f9e",
    "homography_est @ git+https://github.com/rpautrat/homography_est.git@17b200d528e6aa8ac61a878a29265bf5f9d36c41",
]
dev = ["black", "flake8", "isort", "parameterized"]

[tool.setuptools.packages.find]
include = ["keypointfactory*"]

[tool.setuptools.package-data]
gluefactory = ["datasets/megadepth_scene_lists/*.txt", "configs/*.yaml"]

[tool.isort]
profile = "black"
extend_skip = ["gluefactory_nonfree/"]
